--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# Easy swapping of windows
+bind-key C-Left swap-window -t -1
+bind-key C-Right swap-window -t +1
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
