--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ bind-key C-Right swap-window -t +1
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
