--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# Resizing panes is substantially easier with mouse enable
+set -g mouse on
+
 # Easy swapping of windows
 bind-key C-Left swap-window -t -1
 bind-key C-Right swap-window -t +1
