--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # Resizing panes is substantially easier with mouse enable
 set -g mouse on
 
+# Renumber windows so that indexes are recaculated when one closes.
+set-option -g renumber-windows on
+
 # Easy swapping of windows
 bind-key C-Left swap-window -t -1
 bind-key C-Right swap-window -t +1
