Fixing spelling and stray period

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # Resizing panes is substantially easier with mouse enable
 set -g mouse on
 
-# Renumber windows so that indexes are recaculated when one closes.
+# Renumber windows so that indexes are recalculated when one closes
 set-option -g renumber-windows on
 
 # Easy swapping of windows
