Setting the title bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@ set -g mouse on
 # Renumber windows so that indexes are recalculated when one closes
 set-option -g renumber-windows on
 
+# Set the title bar
+set-option -g set-titles on
+
 # Easy swapping of windows
 bind-key C-Left swap-window -t -1
 bind-key C-Right swap-window -t +1
