Adding tmux-simple-git-status and status notification

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,10 +11,13 @@ set-option -g set-titles on
 bind-key C-Left swap-window -t -1
 bind-key C-Right swap-window -t +1
 
+set -ga status-right "#{simple_git_status}"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
