--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set-option -g set-titles on
 bind-key C-Left swap-window -t -1
 bind-key C-Right swap-window -t +1
 
-set -ga status-right "#{simple_git_status}"
+set -g status-right "#{simple_git_status}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
