Commenting tmux-simple-git-status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,7 @@ set-option -g set-titles on
 bind-key C-Left swap-window -t -1
 bind-key C-Right swap-window -t +1
 
+# Setting up tmux-simple-git-status
 set -g status-right "#{simple_git_status}"
 
 # List of plugins
