Ensuring proper display of color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# Ensures proper display of color
+set -g default-terminal "xterm-256color"
+
 # Resizing panes is substantially easier with mouse enable
 set -g mouse on
 
