--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,7 @@ bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 setw -g mode-keys vi
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
 
 # Renumber windows so that indexes are recalculated when one closes
 set-option -g renumber-windows on
