--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Ensures proper display of color
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 
 # Resizing panes is substantially easier with mouse enable
 set -g mouse on
